load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "kernel_core",
    srcs = glob(["**/*.rs"]),
)

rust_test(
    name = "kernel_core_test",
    crate = ":kernel_core",
)

alias(
    name = "core",
    actual = ":kernel_core",
    visibility = ["//experiments/os/kernel:__pkg__"],
)
